fix: delete overflow display

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,3 @@
-@import "katex/dist/katex.min.css";
-
 :root {
   --uno-colors-primary: theme('colors.primary');
   --uno-colors-background: theme('colors.background');
@@ -23,12 +21,4 @@ html {
   --at-apply: 'decoration-underline decoration-0.1em decoration-offset-2px';
   --at-apply: 'ease-in-out duration-300ms';
   --at-apply: 'hover:(c-background bg-primary decoration-primary)';
-}
-
-.katex-display, .katex, .rehype-katex {
-  overflow-x: auto;
-  max-width: 100%;
-  -webkit-overflow-scrolling: touch;
-  box-sizing: border-box;
-  padding-bottom: 0.25rem;
 }
